--- a/src/app/modal/aduan-detail/aduan-detail.page.scss
+++ b/src/app/modal/aduan-detail/aduan-detail.page.scss
@@ -1,14 +1,14 @@
 ion-item {
-  border-radius: 18px;
+  border-radius: 1rem;
   margin-bottom: .7rem;
 }
 
-#map2 {
+#map3 {
   min-height: 40%;
 }
 
 .card-body {
-  background-color: whitesmoke;
+  background-color: #7c7c7c;
   padding: 30px;
   height: calc(100vh - (150px + 56px));
   overflow: hidden;
