--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -1,59 +1,55 @@
 ion-item {
-  border-radius: .5rem;
-  margin-bottom: .7rem;
+  border-radius: 19px;
+  margin-bottom: .9rem;
 }
 
-page-login {
+ion-card {
+  border-radius: 2.3rem;
+  margin: 1.8rem 1.5rem;
+  background-color: whitesmoke;
+}
 
-  .login-content {
-    background: #56CA96;
+.background {
+  background-image: url(../../../assets/img/bg-login.png);
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
 
-    .logo-row {
-      padding-top: 50px;
-      padding-bottom: 20px;
-    }
+.login-title {
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
+  padding-bottom: 1.5rem;
+  padding-top: 1rem;
+}
 
-    .login-box {
-      background: #399F8B;
-      padding: 20px 20px 0px 20px;
-      margin-top: 30px;
-    }
+ion-item {
+  box-shadow: 0 1px 3px 0 var(--ion-color-medium);
+}
 
-    ion-row {
-       align-items: center;
-       text-align: center;
-     }
+ion-router-link {
+  font-weight: bold;
+}
 
-     ion-item {
-         border-radius: 30px !important;
-         padding-left: 30px !important;
-         font-size: 0.9em;
-         margin-bottom: 10px;
-         border: 1px solid #ffffff;
-         border-bottom: 0px !important;
-         box-shadow: none !important;
-     }
+ion-button {
+  --border-radius: 19px;
+}
 
-     .signup-col {
-       margin: 0px 16px 0px 16px;
-       padding-bottom: 20px;
-     }
+.bg-primary {
+  background: linear-gradient(var(--ion-color-primary), #a8b6c5fc);
+  ;
+  height: 45%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  border-bottom-left-radius: 2.5rem;
+  border-bottom-right-radius: 2.5rem;
+  box-shadow: 0 1px 3px 0 var(--ion-color-medium);
+}
 
-     .item-inner {
-       border-bottom-color: #ffffff !important;
-       box-shadow: none !important;
-     }
-
-     .submit-btn {
-       background: #51CFB1;
-       border-radius: 30px !important;
-       border: 1px solid #ffffff;
-     }
-
-     .register-btn {
-       color: #ffffff;
-       font-size: 0.8em;
-     }
-  }
-
+ion-item.item-inner {
+  --border-style: none !important;
 }
