--- a/src/app/core/user/create/create-jalan/create-jalan.page.html
+++ b/src/app/core/user/create/create-jalan/create-jalan.page.html
@@ -1,9 +1,52 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>create-jalan</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>{{isEditMode ? 'Kemaskini':'Daftar'}} Jalan</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
 
+  <div id="container">
+    <form [formGroup]="jalanForm">
+      <ion-grid>
+        <ion-row color="primary" justify-content-center>
+          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+            <div padding>
+              <ion-item>
+                <ion-label position="floating">Keterangan Jalan</ion-label>
+                <ion-input formControlName="detail" type="text" placeholder="Nyatakan Keadaan Jalan"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Alamat</ion-label>
+                <ion-input formControlName="alamat" type="text" placeholder="Alamat Jalan"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Daerah</ion-label>
+                <ion-input formControlName="daerah" type="text" placeholder="Pilih Daerah"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Poskod</ion-label>
+                <ion-input formControlName="poskod" type="text" placeholder="Masukkan Poskod"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Negeri</ion-label>
+                <ion-input formControlName="negeri" type="text" placeholder="Pilih Negeri"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Status Jalan</ion-label>
+                <ion-input formControlName="status" type="text" placeholder="Nyatakan Status Jalan"></ion-input>
+              </ion-item>
+            </div>
+            <div padding>
+              <ion-button size="medium" (click)="submitJalan()" [disabled]="jalanForm.invalid" expand="block">
+                {{isEditMode ? 'Kemaskini':'Daftar'}}</ion-button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </div>
 </ion-content>
