--- a/src/app/core/user/list/aduan-list/aduan-list.page.html
+++ b/src/app/core/user/list/aduan-list/aduan-list.page.html
@@ -8,25 +8,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Senarai Aduan</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <div id="container">
     <ion-list>
-      <ion-card *ngFor="let aduan of aduans$|async" (click)="openDetailModal(aduan)">
+      <ion-card *ngFor="let aduan of aduans$|async" (click)="openDetailModal(aduan)" color="light">
         <ion-grid fixed>
           <ion-row>
             <ion-col size="3">
               <ion-thumbnail>
-                <img [src]="image" />
+                <img src="https://c8.alamy.com/comp/B3MXEK/broken-road-B3MXEK.jpg" alt="img" />
               </ion-thumbnail>
             </ion-col>
             <ion-col size="9">
               <ion-card-content>
-                <ion-card-title>{{aduan.tajuk}}</ion-card-title>
+                <ion-card-title>{{aduan.title}}</ion-card-title>
+                <p>{{aduan.detail}}</p>
               </ion-card-content>
             </ion-col>
           </ion-row>
