--- a/src/app/modal/jalan-detail/jalan-detail.page.html
+++ b/src/app/modal/jalan-detail/jalan-detail.page.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
   <ion-toolbar>
-    <ion-title>{{aduan.tajuk}}</ion-title>
+    <ion-title>{{jalan.detail}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
         <ion-icon slot="start" name="close"></ion-icon>
@@ -10,17 +10,18 @@
 </ion-header>
 
 <ion-content>
-  <img src="https://c8.alamy.com/comp/B3MXEK/broken-road-B3MXEK.jpg" alt="Picture"/>
+  <div #map3 id="map3"></div>
+  <!-- <img src="https://c8.alamy.com/comp/B3MXEK/broken-road-B3MXEK.jpg" alt="Picture"/> -->
   <div class="ion-padding">
-    <ion-text color="primary">
-      <h1>{{aduan.tajuk}}</h1>
-      <h3 class="ion-margin-vertical">{{aduan.keterangan}}</h3>
+    <ion-text>
+      <ion-card-title>{{jalan.detail}}</ion-card-title>
+      <p class="ion-margin-vertical">{{jalan.status}}</p>
     </ion-text>
 
     <ion-button (click)="openEditModal()" expand="block" color="primary" shape="round">
       Kemaskini
     </ion-button>
-    <ion-button (click)="onDeleteAduan()" expand="block" color="danger" shape="round">
+    <ion-button (click)="onDeleteJalan()" expand="block" color="danger" shape="round">
       Hapus
     </ion-button>
   </div>
