--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -39,7 +39,7 @@
         <ion-label>Status</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/jalan-list">
+      <ion-tab-button href="/user/jalan-list">
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
