--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -1,9 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/dashboard">
-        <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
-      </ion-button>
+      <ion-back-button slot="start" name="chevron-back-outline"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="logout()">
