--- a/src/app/auth/register/register-admin/register-admin.page.html
+++ b/src/app/auth/register/register-admin/register-admin.page.html
@@ -1,84 +1,94 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/dashboard">
+      <ion-button href="/admin-management">
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" *ngIf="!isEditMode">
       <ion-button (click)="logout()">
         <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title mode="ios">Daftar Admin Jalan</ion-title>
+    <ion-buttons slot="end" *ngIf="isEditMode">
+      <ion-button (click)="closeModal()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title mode="ios">{{isEditMode ? 'Kemaskini':'Daftar'}} Admin Jalan</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div id="container" class="header">
-    <ion-grid fixed>
-      <ion-row>
-        <ion-col size="7">
-          <div class="input">
-            <ion-item>
-              <ion-input placeholder="Nama Penuh" type="text"></ion-input>
-            </ion-item>
-          </div>
-          <div class="input">
-            <ion-item>
-              <ion-input placeholder="Organisasi" type="text"></ion-input>
-            </ion-item>
-          </div>
-          <div class="input">
-            <ion-item>
-              <ion-input placeholder="Jawatan" type="text"></ion-input>
-            </ion-item>
-          </div>
-          <div class="input2">
-            <ion-item>
-              <ion-input placeholder="No Telefon Bimbit" type="text"></ion-input>
-            </ion-item>
-          </div>
-          <div class="input2">
-            <ion-item>
-              <ion-input placeholder="No Kad Pengenalan" type="text"></ion-input>
-            </ion-item>
-          </div>
-          <div class="input">
-            <ion-item>
-              <ion-select placeholder="Jenis Kad Pengenalan" interface="action-sheet">
-                <ion-select-option value="new_nric">Baru</ion-select-option>
-                <ion-select-option value="old_mric">Lama</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </div>
-          <div class="input">
-            <ion-item>
-              <ion-input placeholder="Alamat Emel" type="text"></ion-input>
-            </ion-item>
-          </div>
-        </ion-col>
-        <ion-col size="5">
-          <div class="avatar">
-            <img src="../../assets/img/default_icon.jpeg" alt="">
-          </div>
-        </ion-col>
+  <form [formGroup]="regAdminForm">
+    <div id="container" class="header">
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="7">
+            <div class="input">
+              <ion-item>
+                <ion-input formControlName="name" placeholder="Nama Penuh" type="text"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input">
+              <ion-item>
+                <ion-input formControlName="organisasi" placeholder="Organisasi" type="text"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input">
+              <ion-item>
+                <ion-input formControlName="jawatan" placeholder="Jawatan" type="text"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input2">
+              <ion-item>
+                <ion-input formControlName="telefon" placeholder="No Telefon Bimbit" type="text"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input2">
+              <ion-item>
+                <ion-input formControlName="nric" placeholder="No Kad Pengenalan" type="text"></ion-input>
+              </ion-item>
+            </div>
+            <div class="input">
+              <ion-item>
+                <ion-select placeholder="Jenis Kad Pengenalan" interface="action-sheet">
+                  <ion-select-option value="new_nric">Baru</ion-select-option>
+                  <ion-select-option value="old_mric">Lama</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </div>
+            <div class="input">
+              <ion-item>
+                <ion-input formControlName="email" placeholder="Alamat Emel" type="text"></ion-input>
+              </ion-item>
+            </div>
+          </ion-col>
+          <ion-col size="5">
+            <div class="avatar">
+              <img src="../../assets/img/default_icon.jpeg" alt="">
+            </div>
+          </ion-col>
 
-      </ion-row>
-    </ion-grid>
-  </div>
-  <div class="card-body">
-    <ion-grid fixed>
-      <ion-row>
-        <ion-col class="ion-text-center">
-          <ion-text color="primary">
-            <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
-          </ion-text>
-          <ion-button (click)="onClick()" mode="ios" shape="round">
-            Daftar
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </div>
+        </ion-row>
+      </ion-grid>
+    </div>
+    <div class="card-body">
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text color="primary">
+              <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
+            </ion-text>
+            <ion-button (click)="submitAdmin()" mode="ios" [disabled]="regAdminForm.invalid" shape="round">
+              {{isEditMode ? 'Kemaskini':'Daftar'}}
+            </ion-button>
+            <ion-button *ngIf="isEditMode" color="danger" (click)="onDeleteUser()" mode="ios" [disabled]="regAdminForm.invalid" shape="round">
+              Hapus
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </form>
 </ion-content>
