--- a/src/app/auth/register/register-superadmin/register-superadmin.page.scss
+++ b/src/app/auth/register/register-superadmin/register-superadmin.page.scss
@@ -14,22 +14,24 @@ ion-item {
   background: linear-gradient(#429AE0, white);
   padding: 1px;
   margin-bottom: .7rem;
+  margin-left: 10px;
 }
 
 .input2 {
   margin-bottom: .7rem;
+  margin-left: 10px;
 }
 
 .header {
-  margin-top: 60px;
-  padding: 10px 40px 10px;
+  margin-top: 100px;
 
   .avatar {
     width: 190px; //40vw
     height: 190px;
     border-radius: 50%;
-    margin: 10px 70px 10px;
+    margin: 30px 0 10px  0;
     padding: 1rem;
+    position: absolute;
     background: linear-gradient(#429AE0, white);
     padding: 1px;
 
@@ -44,10 +46,11 @@ ion-item {
 
 .card-body {
   background: var(--ion-color-light);
-  padding: 10px 70px 10px;
+  padding: 10px 50px 10px;
   width: 100%;
   overflow: hidden;
   bottom: 0;
+  position: absolute;
   border-top-left-radius: 2.5rem;
   border-top-right-radius: 2.5rem;
   box-shadow: 2px -3px 9px -6px black;
