--- a/src/app/core/superadmin/dashboard/dashboard.page.html
+++ b/src/app/core/superadmin/dashboard/dashboard.page.html
@@ -1,9 +1,49 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>dashboard</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+
+  <ion-tabs>
+    <ion-toolbar mode="md">
+      <ion-searchbar [(ngModel)]="autocomplete.input" (ionInput)="UpdateSearchResults()"
+        placeholder="Search for a place" (ionClear)="ClearAutocomplete()"></ion-searchbar>
+      <ion-buttons slot="end">
+        <ion-button (click)="getCurrentCoords()" color="primary">
+          <ion-icon slot="icon-only" name="locate-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+
+      <ion-list [hidden]="autocompleteItems.length === 0">
+        <ion-item *ngFor="let item of autocompleteItems" tappable (click)="SelectSearchResult(item)">
+          {{ item.description }}
+        </ion-item>
+      </ion-list>
+    </ion-toolbar>
+
+    <!-- <div>Address: {{address}}</div>
+    <div>Latitude: {{latitude}}</div>
+    <div>Longitude: {{longitude}}</div> -->
+    <div #map id="map"></div>
+
+    <ion-tab-bar slot="bottom" color-primary>
+      <ion-tab-button href="superadmin/profile">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>Profil</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button href="/admin-management">
+        <ion-icon name="receipt-outline"></ion-icon>
+        <ion-label>Utama</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button href="superadmin/aduan-list">
+        <ion-icon name="analytics-outline"></ion-icon>
+        <ion-label>Statistik</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button href="/admin/jalan-list">
+        <ion-icon name="megaphone-outline"></ion-icon>
+        <ion-label>Hebahan</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 
 </ion-content>
