--- a/src/app/core/superadmin/list/superadmin-list/superadmin-list.page.html
+++ b/src/app/core/superadmin/list/superadmin-list/superadmin-list.page.html
@@ -1,9 +1,43 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>superadmin-list</ion-title>
+    <ion-buttons slot="start">
+      <ion-button href="/superadmin/dashboard">
+        <ion-icon slot="icon-only" name="chevron-back-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title mode="ios">Super Admin</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <div id="container" class="background">
+    <ion-list>
+      <ion-list-header>
+        <ion-label color="primary" size="small">SENARAI SUPER ADMIN</ion-label>
+      </ion-list-header>
+      <ion-card *ngFor="let user of users$|async" (click)="openDetailModal(user)">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="9">
+              <ion-card-content>
+                <ion-card-title>{{user.name}}</ion-card-title>
+                <span class="text-limit">{{user.name}}</span>
+              </ion-card-content>
+            </ion-col>
+            <ion-col size="3">
+              <!-- <ion-badge color="success" mode="ios">Selesai</ion-badge> -->
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card>
+    </ion-list>
+  </div>
 
 </ion-content>
