--- a/src/app/core/user/list/jalan-list/jalan-list.page.scss
+++ b/src/app/core/user/list/jalan-list/jalan-list.page.scss
@@ -1,5 +1,5 @@
 .background {
-  background-image: url(../../../../assets/img/bg-login.png);
+  background-image: url(../../../../../assets/img/bg-login.png);
   z-index: -1;
   height: 100%;
   width: 100%;
