--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -46,7 +46,7 @@
     </form>
     <div style="display: flex; align-items: flex-end; margin-top:2rem; justify-content: center;">
       Tiada akaun?
-      <ion-router-link color="primary" href="/register">&nbsp;Daftar Sekarang
+      <ion-router-link color="primary" (click)="openRegister()">&nbsp;Daftar Sekarang
       </ion-router-link>
     </div>
   </div>
