--- a/src/app/core/admin/profile/profile.page.html
+++ b/src/app/core/admin/profile/profile.page.html
@@ -1,30 +1,30 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button href="/admin-management">
+      <ion-button defaultHref="/user/dashboard">
         <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-buttons slot="end" *ngIf="!isEditMode">
+    <ion-buttons slot="end">
       <ion-button (click)="logout()">
         <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-buttons slot="end" *ngIf="isEditMode">
-      <ion-button (click)="closeModal()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title mode="ios">{{isEditMode ? 'Kemaskini':'Daftar'}} Admin Jalan</ion-title>
+    <ion-title mode="ios">Profil Admin</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form [formGroup]="regAdminForm">
+  <form [formGroup]="profileForm" class="container">
     <div id="container" class="header">
       <ion-grid fixed>
         <ion-row>
-          <ion-col size="9">
+          <ion-col size="12">
+            <div class="avatar">
+              <img src="../../assets/img/default_icon.jpeg" alt="">
+            </div>
+          </ion-col>
+          <ion-col size="12">
             <div class="input">
               <ion-item>
                 <ion-input formControlName="name" placeholder="Nama Penuh" type="text"></ion-input>
@@ -32,23 +32,17 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-select formControlName="organisasi" placeholder="Organisasi" interface="action-sheet">
-                  <ion-select-option value="JKR">JKR</ion-select-option>
-                  <ion-select-option value="KKR">KKR</ion-select-option>
-                </ion-select>
+                <ion-input formControlName="email" placeholder="Alamat Emel" type="text"></ion-input>
               </ion-item>
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="jawatan" placeholder="Jawatan" type="text"></ion-input>
+                <ion-input formControlName="organisasi" placeholder="Nama Organisasi" type="text"></ion-input>
               </ion-item>
             </div>
             <div class="input">
               <ion-item>
-                <ion-select formControlName="role" placeholder="Peranan" interface="action-sheet">
-                  <ion-select-option value="super_admin">Super Admin</ion-select-option>
-                  <ion-select-option value="admin">Admin</ion-select-option>
-                </ion-select>
+                <ion-input formControlName="jawatan" placeholder="Nama Jawatan" type="text"></ion-input>
               </ion-item>
             </div>
             <div class="input">
@@ -63,7 +57,7 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Kad Pengenalan" type="number"></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="text"></ion-input>
               </ion-item>
             </div>
             <div class="input2">
@@ -73,13 +67,25 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="email" placeholder="Alamat Emel" type="text"></ion-input>
+                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="password" autocomplete="off">
+                </ion-input>
               </ion-item>
             </div>
-          </ion-col>
-          <ion-col size="3">
-            <div class="avatar">
-              <img src="../../assets/img/default_icon.jpeg" alt="">
+            <div class="input">
+              <ion-item>
+                <ion-input formControlName="confirmpassword" placeholder="Sah Kata Laluan" type="password"
+                  autocomplete="off"></ion-input>
+              </ion-item>
+            </div>
+            <div *ngFor="let error of error_messages.confirmpassword">
+              <div class="error"
+                *ngIf="profileForm.get('confirmpassword').hasError(error.type) && (profileForm.get('confirmpassword').dirty || profileForm.get('confirmpassword').touched)">
+                {{ error.message }}
+              </div>
+            </div>
+            <div class="error"
+              *ngIf="!profileForm.get('confirmpassword').errors && profileForm.hasError('passwordNotMatch') && (profileForm.get('confirmpassword').dirty || profileForm.get('confirmpassword').touched)">
+              Sila masukkan kata laluan yang sama
             </div>
           </ion-col>
         </ion-row>
@@ -92,12 +98,8 @@
             <ion-text color="primary">
               <p>Sila pastikan maklumat peribadi anda telah diisi dengan lengkap</p>
             </ion-text>
-            <ion-button (click)="submitAdmin()" mode="ios" [disabled]="regAdminForm.invalid" shape="round">
-              {{isEditMode ? 'Kemaskini':'Daftar'}}
-            </ion-button>
-            <ion-button *ngIf="isEditMode" color="danger" (click)="onDeleteUser()" mode="ios"
-              [disabled]="regAdminForm.invalid" shape="round">
-              Hapus
+            <ion-button (click)="updateProfile()" [disabled]="profileForm.invalid" mode="ios" shape="round">
+              Kemas Kini
             </ion-button>
           </ion-col>
         </ion-row>
