--- a/src/app/auth/register/register-admin/register-admin.page.scss
+++ b/src/app/auth/register/register-admin/register-admin.page.scss
@@ -26,8 +26,8 @@ ion-item {
   margin-top: 100px;
 
   .avatar {
-    width: 190px; //40vw
-    height: 190px;
+    width: 120px; //40vw
+    height: 120px;
     border-radius: 50%;
     margin: 30px 0 10px  0;
     padding: 1rem;
@@ -50,7 +50,7 @@ ion-item {
   width: 100%;
   overflow: hidden;
   bottom: 0;
-  position: absolute;
+  // position: absolute;
   border-top-left-radius: 2.5rem;
   border-top-right-radius: 2.5rem;
   box-shadow: 2px -3px 9px -6px black;
