--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -24,7 +24,7 @@
     <div #map id="map"></div>
 
     <ion-tab-bar slot="bottom" color-primary>
-      <ion-tab-button href="/profile">
+      <ion-tab-button href="/user/profile">
         <ion-icon name="person-outline"></ion-icon>
         <ion-label>Profil</ion-label>
       </ion-tab-button>
