--- a/src/app/core/user/upload-gambar/upload-gambar.page.html
+++ b/src/app/core/user/upload-gambar/upload-gambar.page.html
@@ -49,7 +49,7 @@
               </ion-card>
               <br>
               <div padding>
-                <ion-button mode="ios" size="medium" (click)="submitAduan()" expand="block">
+                <ion-button mode="ios" size="medium" href="/user/dashboard" expand="block">
                   Seterusnya</ion-button>
               </div>
             </ion-col>
