--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '~@angular/material' as mat;
+@use '~@angular/material'as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,13 +19,10 @@ $app-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$app-theme: mat.define-light-theme((
-  color: (
-    primary: $app-primary,
-    accent: $app-accent,
-    warn: $app-warn,
-  )
-));
+$app-theme: mat.define-light-theme((color: (primary: $app-primary,
+      accent: $app-accent,
+      warn: $app-warn,
+    )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -270,5 +266,37 @@ $app-theme: mat.define-light-theme((
 //   }
 // }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+ion-input {
+  --placeholder-color: black;
+  --placeholder-opacity: .9;
+  text-align: center;
+
+  .native-input.sc-ion-input-ios,
+  .native-input.sc-ion-input-md {
+    font-size: 13px !important;
+  }
+}
+
+ion-select {
+  text-align: center;
+  font-size: 13px !important;
+}
+
+// ion-content {
+//   // overwrite inline styles
+//   --offset-bottom: auto !important;
+//   --overflow: hidden;
+//   overflow: auto;
+
+
+// }
